<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ubiquisense</string>

    <string name="nav_charts">Charts</string> 
    <string name="nav_bots">Bots</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_alerts">Alerts</string>
    <string name="nav_usb">USB</string>
    
    
    <string name="dummy_content">TradeBot Talk</string>
    <string name="tradebots_title">TradeBots Status</string>
    <string name="tradebots_refresh_button">Refresh</string>
    
    <string name="candlestickchart">Candle Stick Chart</string>
    <string name="gridchart">Grid Chart</string>
    <string name="settings_title">Settings</string>
    <string name="save_settings_button">Save</string>
    
    <string name="ticker_text"></string>
    
    <string name="apiKeyTxt">API Key</string>
    <string name="apiKeyHint">MtGoX API Key</string>
    
    <string name="secretKeyTxt">Secret Key</string>
    <string name="secretKeyHint">MtGoX Secret Key</string>
    
    <string name="serverAddrText">Server IP</string>
    <string name="serverAddrHint">192.168.0.11</string>
    
    <string name="serverPortText">Server Port</string>
    <string name="serverPortHint">8095</string>
    
    <string name="tradebots_detail_header">TradeBot Configuration</string>
    
    <string name="trigger_master_header">Triggers</string>
    <string name="trigger_detail_header">Configuration</string>
    
    <string name="trigger_rules_detail_header">Rules</string>
    <string name="trigger_orders_detail_header">Orders</string>
    <string name="trigger_notifications_detail_header">Notifications</string>
    
    <string name="iconDesc">TradeBot Configuration Icon</string>
    
    <string name="runningText">Running</string>
    <string name="pausedText">Paused</string>
    <string name="terminatedText">Terminated</string>
    
    <string name="usb_title">USB Connection</string>
    
    <string name="addAlert">Add Alert</string>
    <string name="deleteAlert">Delete Alert</string>
    
    <string name="alerts_title">Alerts</string>
    <string name="alerts_details_title">Details</string>
    
    <string name="alertPriceTxt">Price</string>
    <string name="alertPriceValueTxt">100</string>
    <string name="okAlertsButtonView">OK</string>
    <string name="cancelAlertButtonView">Cancel</string>
            
    <string name="pref_user_profile">Ubiquisense Profile Settings</string>
    <string name="pref_ubi_server_addr">Server IP Address</string>
    <string name="pref_ubi_server_addr_summary">Ubiquisense Remote Server IP Address</string>
    <string name="pref_ubi_server_port">Server Port</string>
    <string name="pref_ubi_server_port_summary">Ubiquisense Remote Server IP Port</string>
    <string name="pref_ubi_websocket_port">WebSocket Port</string>
    <string name="pref_ubi_websocket_port_summary">Ubiquisense Remote Websocket Port</string>
    
</resources>
