<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
    <PreferenceCategory android:title="@string/pref_user_profile" >
        <EditTextPreference
                android:title="@string/pref_ubi_server_addr"
                android:summary="@string/pref_ubi_server_addr_summary"
                android:key="prefUbiServerAddr"/>
        
        <EditTextPreference
                android:title="@string/pref_ubi_server_port"
                android:summary="@string/pref_ubi_server_port_summary"
                android:key="prefUbiServerPort"/>
        
        <EditTextPreference
                android:title="@string/pref_ubi_websocket_port"
                android:summary="@string/pref_ubi_websocket_port_summary"
                android:key="prefUbiWebSocketPort"/>
        </PreferenceCategory>
     
    <!-- 
    <PreferenceCategory android:title="@string/pref_update_setting" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefSendReport"
            android:summary="@string/pref_send_report_summary"
            android:title="@string/pref_send_report" >
        </CheckBoxPreference>
 
        <ListPreference
            android:key="prefSyncFrequency"
            android:entries="@array/syncFrequency"
            android:summary="@string/pref_sync_frequency_summary"
            android:entryValues="@array/syncFrequencyValues"
            android:title="@string/pref_sync_frequency" />
    </PreferenceCategory>
  -->
</PreferenceScreen>